fix leadership page spacing 1200px FINAL

--- a/wp-content/themes/conall-child/src/scss/pages/leadership.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/leadership.scss
@@ -104,15 +104,16 @@ div#leadership-content {
         margin-top: 20px !important;
     }
 }
+
 @media all and (max-width: 1300px) {
     div#leadership-content div.leadership-row:nth-child(1) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
     }
     div#leadership-content div.leadership-row:nth-child(2) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 80px !important;
+        margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(3) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 60px !important;
+        margin-top: 40px !important;
     }
     div#leadership-content div.leadership-row:nth-child(4) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
@@ -121,7 +122,7 @@ div#leadership-content {
         margin-top: 20px !important;
     }
     div#leadership-content div.leadership-row:nth-child(6) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 60px !important;
+        margin-top: 40px !important;
     }
     div#leadership-content div.leadership-row:nth-child(7) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
@@ -129,13 +130,13 @@ div#leadership-content {
 }
 @media all and (max-width: 1200px) {
     div#leadership-content div.leadership-row:nth-child(1) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 80px !important;
+        margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(2) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 140px !important;
+        margin-top: 120px !important;
     }
     div#leadership-content div.leadership-row:nth-child(3) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 80px !important;
+        margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(4) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
@@ -152,13 +153,13 @@ div#leadership-content {
 }
 @media all and (max-width: 1100px) {
     div#leadership-content div.leadership-row:nth-child(1) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 115px !important;
+        margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(2) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 170px !important;
+        margin-top: 120px !important;
     }
     div#leadership-content div.leadership-row:nth-child(3) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 120px !important;
+        margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(4) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
@@ -167,7 +168,7 @@ div#leadership-content {
         margin-top: 20px !important;
     }
     div#leadership-content div.leadership-row:nth-child(6) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 120px !important;
+        margin-top: 100px !important;
     }
     div#leadership-content div.leadership-row:nth-child(7) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 20px !important;
